cart style fixes on mobile

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -63,9 +63,10 @@
   top: 0;
   padding: 2rem;
   height: 100vh;
-  width: 25vw;
+  width: 20rem;
   animation: slideIn 0.3s ease-out forwards;
   z-index: 1000;
+  min-width: 20rem;
 
   &__close {
     position: absolute;
